--- a/css/breadcum-form.css
+++ b/css/breadcum-form.css
@@ -704,7 +704,44 @@ summary::-webkit-details-marker {
 	height: auto;
   }
 }
-
+@media only screen and (max-width: 520px){
+	.porfolio-width{
+	min-width: 100%;
+}
+	.case-study:hover .case-study__title 
+	{
+	  margin-top: 28px;
+	  font-size: 20px;
+	}
+	.case-study:hover .case-study__title1
+	{
+	  margin-top: 79px;
+	  font-size: 20px;
+	}
+	.case-study:hover .case-study__title2
+	{
+	  margin-top: 50px;
+	  font-size: 20px;
+	}
+	.case-study:hover .case-study__title3
+	{
+	  margin-top: 45px;
+	  font-size: 20px;
+	}
+	.case-study:hover .case-study__title4
+	{
+	  margin-top: 56px;
+	  font-size: 20px;
+	}
+	.case-study:hover .case-study__title5
+	{
+	  margin-top: 28px;
+	  font-size: 20px;
+	}
+}
+.porfolio-width{
+	max-width: 50%;
+}
 .case-study__img {
   /*width: 90%;
   display: block;
@@ -737,9 +774,9 @@ summary::-webkit-details-marker {
 
 .case-study__title {
       position: relative;
-    top: -223px;
+    top: -330px;
     margin-bottom: -3rem;
-    margin-top: 7rem;
+    margin-top: 16rem;
     font-size: 2rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 100;
@@ -751,8 +788,8 @@ summary::-webkit-details-marker {
 
 .case-study__link {
     position: relative;
-    top: -365px;
-    margin-bottom: 5rem;
+    top: -395px;
+    margin-bottom: -5rem;
     margin-top: 5rem;
     font-size: 1rem;
     font-family: 'Poppins', sans-serif;
@@ -762,6 +799,7 @@ summary::-webkit-details-marker {
     letter-spacing: 3px;
     transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
 }
+
 .case-study__link:hover {
   background-color: white;
   color: #202020;
@@ -788,6 +826,386 @@ summary::-webkit-details-marker {
   opacity: .75;
   
 }
+/* 2nd hover*/
+.case-study__overlay1 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
+.case-study__overlay1:after {
+  content: '';
+  width: 100%;
+  border-radius: 10px;
+  height: 100%;
+  background-color: #202020;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  z-index: -10;
+  left: 0;
+  transition: all .3s ease;
+	/*opacity: 0.5;*/
+}
+.case-study__title1 {
+      position: relative;
+    top: -330px;
+    margin-bottom: -3rem;
+    margin-top: 13rem;
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+
+.case-study__link1 {
+    position: relative;
+    top: -395px;
+    margin-bottom: -5rem;
+    margin-top: 5rem;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+.case-study__link1:hover {
+  background-color: white;
+  color: #202020;
+}
+
+.case-study:hover .case-study__title1 {
+  top: 0;
+}
+.case-study:hover .case-study__link1 {
+  top: 0;
+}
+.case-study:hover .case-study__overlay1:after {
+  opacity: .75;
+  
+}
+
+.case-study2:hover .case-study__title1 {
+  top: 0;
+}
+.case-study2:hover .case-study__link1 {
+  top: 0;
+}
+.case-study2:hover .case-study__overlay1:after {
+  opacity: .75;
+  
+}
+/* 2nd hover*/
+/* 3rd hover*/
+.case-study__overlay2 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
+.case-study__overlay2:after {
+  content: '';
+  width: 100%;
+  border-radius: 10px;
+  height: 100%;
+  background-color: #202020;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  z-index: -10;
+  left: 0;
+  transition: all .3s ease;
+	/*opacity: 0.5;*/
+}
+.case-study__title2 {
+      position: relative;
+    top: -330px;
+    margin-bottom: -3rem;
+    margin-top: 7rem;
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+
+.case-study__link2 {
+    position: relative;
+    top: -395px;
+    margin-bottom: -5rem;
+    margin-top: 5rem;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+.case-study__link2:hover {
+  background-color: white;
+  color: #202020;
+}
+
+.case-study:hover .case-study__title2 {
+  top: 0;
+}
+.case-study:hover .case-study__link2 {
+  top: 0;
+}
+.case-study:hover .case-study__overlay2:after {
+  opacity: .75;
+  
+}
+
+.case-study2:hover .case-study__title2 {
+  top: 0;
+}
+.case-study2:hover .case-study__link2 {
+  top: 0;
+}
+.case-study2:hover .case-study__overlay2:after {
+  opacity: .75;
+  
+}
+/* 3rd hover*/
+/* 4th hover*/
+.case-study__overlay3 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
+.case-study__overlay3:after {
+  content: '';
+  width: 100%;
+  border-radius: 10px;
+  height: 100%;
+  background-color: #202020;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  z-index: -10;
+  left: 0;
+  transition: all .3s ease;
+	/*opacity: 0.5;*/
+}
+.case-study__title3 {
+      position: relative;
+    top: -330px;
+    margin-bottom: -3rem;
+    margin-top: 8rem;
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+
+.case-study__link3 {
+    position: relative;
+    top: -395px;
+    margin-bottom: -5rem;
+    margin-top: 5rem;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+.case-study__link3:hover {
+  background-color: white;
+  color: #202020;
+}
+
+.case-study:hover .case-study__title3 {
+  top: 0;
+}
+.case-study:hover .case-study__link3 {
+  top: 0;
+}
+.case-study:hover .case-study__overlay3:after {
+  opacity: .75;
+  
+}
+
+.case-study2:hover .case-study__title3 {
+  top: 0;
+}
+.case-study2:hover .case-study__link3 {
+  top: 0;
+}
+.case-study2:hover .case-study__overlay3:after {
+  opacity: .75;
+  
+}
+/* 4th hover*/
+/* 5th hover*/
+.case-study__overlay4 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
+.case-study__overlay4:after {
+  content: '';
+  width: 100%;
+  border-radius: 10px;
+  height: 100%;
+  background-color: #202020;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  z-index: -10;
+  left: 0;
+  transition: all .3s ease;
+	/*opacity: 0.5;*/
+}
+.case-study__title4 {
+      position: relative;
+    top: -330px;
+    margin-bottom: -3rem;
+    margin-top: 8rem;
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+
+.case-study__link4 {
+    position: relative;
+    top: -395px;
+    margin-bottom: -5rem;
+    margin-top: 5rem;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+.case-study__link4:hover {
+  background-color: white;
+  color: #202020;
+}
+
+.case-study:hover .case-study__title4 {
+  top: 0;
+}
+.case-study:hover .case-study__link4 {
+  top: 0;
+}
+.case-study:hover .case-study__overlay4:after {
+  opacity: .75;
+  
+}
+
+.case-study2:hover .case-study__title4 {
+  top: 0;
+}
+.case-study2:hover .case-study__link4 {
+  top: 0;
+}
+.case-study2:hover .case-study__overlay4:after {
+  opacity: .75;
+  
+}
+/* 5th hover*/
+/* 6th hover*/
+.case-study__overlay5 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
+.case-study__overlay5:after {
+  content: '';
+  width: 100%;
+  border-radius: 10px;
+  height: 100%;
+  background-color: #202020;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  z-index: -10;
+  left: 0;
+  transition: all .3s ease;
+	/*opacity: 0.5;*/
+}
+.case-study__title5 {
+      position: relative;
+    top: -330px;
+    margin-bottom: -3rem;
+    margin-top: 6rem;
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+
+.case-study__link5 {
+    position: relative;
+    top: -395px;
+    margin-bottom: -5rem;
+    margin-top: 5rem;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1.3);
+}
+.case-study__link5:hover {
+  background-color: white;
+  color: #202020;
+}
+
+.case-study:hover .case-study__title5 {
+  top: 0;
+}
+.case-study:hover .case-study__link5 {
+  top: 0;
+}
+.case-study:hover .case-study__overlay5:after {
+  opacity: .75;
+  
+}
+
+.case-study2:hover .case-study__title5 {
+  top: 0;
+}
+.case-study2:hover .case-study__link5 {
+  top: 0;
+}
+.case-study2:hover .case-study__overlay5:after {
+  opacity: .75;
+  
+}
+/* 6th hover*/
 .bd-hor .bd-hor-base:after {
     content: '';
     position: absolute;
